--- a/Jenkins/Scripted/Jenkinsfile
+++ b/Jenkins/Scripted/Jenkinsfile
@@ -6,6 +6,6 @@ node {
         sh 'git clone https://github.com/Pravin-Kumar-GitHub/spring-petclinic.git'
     }
     stage ('building') {
-        sh 'cd spring-petclinic/ && mvn package'
+        sh 'mvn package'
     }
 }
